--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.2",
     "postcss": "8.4.23",
     "prisma": "^4.13.0",
@@ -24,5 +26,9 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
