--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "paths": {
       "@/*": ["./*"],
       "@api/*": ["./app/api/*"],
+      "@comp/*": ["./components/*"],
       "@util/*": ["./util/*"]
     }
   },
