--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prisma": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "valtio": "^1.10.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
