--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@prisma/client": "4.13.0",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+    "@toast-ui/react-editor": "^3.2.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
@@ -20,6 +23,7 @@
     "next": "13.3.2",
     "postcss": "8.4.23",
     "prisma": "^4.13.0",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
@@ -29,8 +33,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.16.3",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "editor-plugin-code-syntax-highlight": "link:@types/@toast-ui/editor-plugin-code-syntax-highlight",
     "typescript": "5.0.4"
   }
 }
