--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "zustand": "^4.3.8"
   },
