--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "prisma": "prisma"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "4.13.0",
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
@@ -38,6 +41,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "editor-plugin-code-syntax-highlight": "link:@types/@toast-ui/editor-plugin-code-syntax-highlight",
+    "ts-node": "^10.9.1",
     "typescript": "5.0.4"
   }
 }
